--- a/CrecerIndexApi/appsettings.json
+++ b/CrecerIndexApi/appsettings.json
@@ -12,10 +12,16 @@
     "Audience": "CrecerIndexApiClient",
     "DurationInMinutes": 60
   },
+  //QA
   "ConnectionStrings": {
     "CRECERSEGUROS": "Server=tcp:intranetcrecer.database.windows.net;Initial Catalog=CRECERSEGUROS;User ID=intranetcrecer;Password=crecer@123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=EXACTUSQA)));",
     "OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=ACSELQA)));"
-  }
-
+  },
+  ////PRODUCCION
+  //"ConnectionStrings": {
+  //  "CRECERSEGUROS": "Server=tcp:intranetcrecer.database.windows.net;Initial Catalog=CRECERSEGUROS;User ID=intranetcrecer;Password=crecer@123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+  //  "OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=200.48.82.240)(PORT=1525)))(CONNECT_DATA=(SID=exactus)));",
+  //  "OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=200.48.82.240)(PORT=1525)))(CONNECT_DATA=(SID=PERFO)));"
+  //}
 }
