feat: cambios jwt

--- a/CrecerIndexApi/appsettings.json
+++ b/CrecerIndexApi/appsettings.json
@@ -13,15 +13,16 @@
     "DurationInMinutes": 60
   },
   //QA
+  // QA
   "ConnectionStrings": {
     "CRECERSEGUROS": "Server=tcp:intranetcrecer.database.windows.net;Initial Catalog=CRECERSEGUROS;User ID=intranetcrecer;Password=crecer@123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=EXACTUSQA)));",
-    "OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=ACSELQA)));"
-  },
+    "OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=EXACTUSQA)));Validate Connection=true;Pooling=true;Min Pool Size=0;Max Pool Size=50;Connection Lifetime=90;Connection Timeout=15;",
+    "OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=ACSELQA)));Validate Connection=true;Pooling=true;Min Pool Size=0;Max Pool Size=50;Connection Lifetime=90;Connection Timeout=15;"
+  }
   ////PRODUCCION
   //"ConnectionStrings": {
   //  "CRECERSEGUROS": "Server=tcp:intranetcrecer.database.windows.net;Initial Catalog=CRECERSEGUROS;User ID=intranetcrecer;Password=crecer@123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-  //  "OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=200.48.82.240)(PORT=1525)))(CONNECT_DATA=(SID=exactus)));",
-  //  "OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=200.48.82.240)(PORT=1525)))(CONNECT_DATA=(SID=PERFO)));"
+  //  "OracleDB": "User Id=SIGMA_LECTURA;Password=S1gm@Lec2023.;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.31.3.101)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=exactus)));",
+  //  "OracleCoreDB": "User Id=CRECER_LECTURA;Password=4fKoEw821TOF;Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.31.3.101)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=crecer)));"
   //}
 }
