--- a/CrecerIndex.Services/CrecerIndex.Services.csproj
+++ b/CrecerIndex.Services/CrecerIndex.Services.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="23.8.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
