--- a/CrecerIndexApi/appsettings.json
+++ b/CrecerIndexApi/appsettings.json
@@ -12,12 +12,32 @@
     "Audience": "CrecerIndexApiClient",
     "DurationInMinutes": 60
   },
-  //QA
+
+  "Security": {
+    "AllowedOrigins": [
+      "http://localhost:4200",
+      "https://crecer-indexfront-crhsbre8hhdxc8dx.eastus-01.azurewebsites.net",
+      "https://intraqa.crecerseguros.pe"
+    ],
+    "AzureFrontDoor": {
+      "RequireFDID": false,
+      "ExpectedFDIDs": [ "PON_AQUI_TU_FDID_real" ]
+    },
+    "HstsDays": 365
+  },
+  "Recaptcha": {
+    "scaptchatoken": "6LdN6boZAAAAAJ54aGc_Pb6LtJARqR7P7jiNl_Wh"
+  },
+
   // QA
   "ConnectionStrings": {
     "CRECERSEGUROS": "Server=tcp:intranetcrecer.database.windows.net;Initial Catalog=CRECERSEGUROS;User ID=intranetcrecer;Password=crecer@123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=EXACTUSQA)));Validate Connection=true;Pooling=true;Min Pool Size=0;Max Pool Size=50;Connection Lifetime=90;Connection Timeout=15;",
-    "OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=ACSELQA)));Validate Connection=true;Pooling=true;Min Pool Size=0;Max Pool Size=50;Connection Lifetime=90;Connection Timeout=15;"
+    //"OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=EXACTUSQA)));Validate Connection=true;Pooling=true;Min Pool Size=0;Max Pool Size=50;Connection Lifetime=90;Connection Timeout=15;",
+    //"OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=ACSELQA)));Validate Connection=true;Pooling=true;Min Pool Size=0;Max Pool Size=50;Connection Lifetime=90;Connection Timeout=15;"
+    "OracleDB": "User Id=SIGMA;Password=SIGMA;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=EXACTUSQA)));Pooling=true;Min Pool Size=10;Max Pool Size=200;Incr Pool Size=5;Decr Pool Size=2;Statement Cache Size=20;Validate Connection=true;Connection Lifetime=300;Connection Timeout=60;",
+    "OracleCoreDB": "User Id=CRECER_SEGURO;Password=CRECER_SEGURO;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=172.191.45.120)(PORT=1535)))(CONNECT_DATA=(SID=ACSELQA)));Pooling=true;Min Pool Size=10;Max Pool Size=200;Incr Pool Size=5;Decr Pool Size=2;Statement Cache Size=20;Validate Connection=true;Connection Lifetime=300;Connection Timeout=60;"
+
+
   }
   ////PRODUCCION
   //"ConnectionStrings": {
